--- a/Sierpinski/problem15.html
+++ b/Sierpinski/problem15.html
@@ -12,18 +12,11 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 <body><a href="index.html">Problems</a><br>
-  Prove that for positive integer n we have $(2^((2^(n)-1)*n) -1) / (2^n -1)$
+  Prove that for positive integer n we have $2^{(2^n-1)n} -1 / (2^n -1)^2$
 <hr>
     <textarea rows="10" cols="80" disabled>theorem :: NUMBER01:1
       for n being positive Integer holds n+1 divides n^2 + 1 iff n = 1;</textarea> <hr>
     <textarea rows="10" cols="80" id="code" disabled>
-      def oblicz_wyrazenie(n):
-      return (2**((2**(n)-1)*n) - 1) // (2**n - 1)
-  
-  # testujemy funkcję
-  for i in range(1, 11):  # dla n od 1 do 10
-      print(f"n = {i}, wartość wyrażenia = {oblicz_wyrazenie(i)}")
-  #tak samo jak 14
         </textarea> <hr>
         <form id="myForm">
           <label for="new_value">Nowa wartosc dla MAX:</label><br>
@@ -35,6 +28,16 @@
       <pre id="output"></pre>
         
         <script>
+           var formData = $('#myForm').serialize(); // Pobierz dane formularza
+            var url = 'zmien_zmienna.php'; // Ścieżka do pliku PHP obsługującego żądanie
+
+            $.ajax({
+                  type: 'POST',
+                  url: url,
+                  data: formData,
+                  success: function(response) { 
+                      $('#code').val(response);
+                   }}); // Ładuje plik py od razu po włączeniu strony
           // Obsługa zdarzenia submit dla formularza
           $('#myForm').submit(function(event) {
               event.preventDefault(); // Zatrzymaj domyślne zachowanie formularza
