--- a/Sierpinski/problem19.html
+++ b/Sierpinski/problem19.html
@@ -12,17 +12,10 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 <body><a href="index.html">Problems</a><br>
-  Find all positive integers a for which $a^10+ 1$ is divisible by $10$.<hr>
+  Find all positive integers a for which $a^{10}+ 1$ is divisible by $10$.<hr>
     <textarea rows="10" cols="80" disabled>theorem :: NUMBER01:1
       for n being positive Integer holds n+1 divides n^2 + 1 iff n = 1;</textarea> <hr>
     <textarea rows="10" cols="80" id="code" disabled>
-      def sprawdz_liczbe(a):
-      return (a ** 10 + 1) % 10 == 0
-  
-  # testujemy funkcję
-  for a in range(1, 101):  # dla a od 1 do 100
-      if sprawdz_liczbe(a):
-          print(a)
         </textarea> <hr>
         <form id="myForm">
           <label for="new_value">Nowa wartosc dla MAX:</label><br>
@@ -34,6 +27,16 @@
       <pre id="output"></pre>
         
         <script>
+           var formData = $('#myForm').serialize(); // Pobierz dane formularza
+            var url = 'zmien_zmienna.php'; // Ścieżka do pliku PHP obsługującego żądanie
+
+            $.ajax({
+                  type: 'POST',
+                  url: url,
+                  data: formData,
+                  success: function(response) { 
+                      $('#code').val(response);
+                   }}); // Ładuje plik py od razu po włączeniu strony
           // Obsługa zdarzenia submit dla formularza
           $('#myForm').submit(function(event) {
               event.preventDefault(); // Zatrzymaj domyślne zachowanie formularza
