--- a/Sierpinski/problem7.html
+++ b/Sierpinski/problem7.html
@@ -12,20 +12,10 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 <body><a href="index.html">Problems</a><br>
-  Prove that $(20^(15) -1)/(11*31*61)$ <hr>
+  Prove that $20^{15 -1}/(11*31*61)$ <hr>
     <textarea rows="10" cols="80" disabled>theorem :: NUMBER01:1
       for n being positive Integer holds n+1 divides n^2 + 1 iff n = 1;</textarea> <hr>
     <textarea rows="10" cols="80" id="code" disabled>
-      def check_number():
-      number = (20**15 - 1)
-      divisor = (11 * 31 * 61)
-      if number % divisor == 0:
-          print(f"(20^(15) -1) = {number} = 11 * 31 * 61 * {number // divisor}")
-      else:
-          print(f"(20^(15) -1) / (11 * 31 * 61) nie jest liczbą całkowitą: {number / divisor}")
-  
-  # Sprawdza, czy (20^15 - 1) jest podzielne przez (11 * 31 * 61)
-  check_number()
         </textarea> <hr>
         <form id="myForm">
           <label for="new_value">Nowa wartosc dla MAX:</label><br>
@@ -37,6 +27,16 @@
       <pre id="output"></pre>
         
         <script>
+           var formData = $('#myForm').serialize(); // Pobierz dane formularza
+            var url = 'zmien_zmienna.php'; // Ścieżka do pliku PHP obsługującego żądanie
+
+            $.ajax({
+                  type: 'POST',
+                  url: url,
+                  data: formData,
+                  success: function(response) { 
+                      $('#code').val(response);
+                   }}); // Ładuje plik py od razu po włączeniu strony
           // Obsługa zdarzenia submit dla formularza
           $('#myForm').submit(function(event) {
               event.preventDefault(); // Zatrzymaj domyślne zachowanie formularza
