--- a/Sierpinski/problem11.html
+++ b/Sierpinski/problem11.html
@@ -12,22 +12,10 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 <body><a href="index.html">Problems</a><br>
-  For positive integer $n$, find which of the two numbers $an = (2^(2n+1))-(2^(n+1))+1$ and $bn = 2^(2n+1) + 2^(n+1) +1$ is divisible by $5$ and which is not.  <hr>
+  For positive integer $n$, find which of the two numbers $an = 2^{2n+1}-2^{n+1}+1$ and $bn = 2^{2n+1}+2^{n+1} +1$ is divisible by $5$ and which is not. <hr>
     <textarea rows="10" cols="80" disabled>theorem :: NUMBER01:1
       for n being positive Integer holds n+1 divides n^2 + 1 iff n = 1;</textarea> <hr>
     <textarea rows="10" cols="80" id="code" disabled>
-      def liczby(n):
-      an = 2**(2*n+1)-2**(n+1)+1
-      bn = 2**(2*n+1)+2**(n+1)+1
-  
-      if an % 5 == 0:
-          print(f"Dla n = {n}, an = 2^(2n+1) - 2^(n+1) + 1 = {an} = 5*{an//5}.")
-      if bn % 5 == 0:
-          print(f"Dla n = {n}, bn = 2^(2n+1) + 2^(n+1) + 1 = {bn} = 5*{bn//5}.")
-  
-  # testujemy funkcję
-  for i in range(1, 11):  # dla n od 1 do 10
-      {liczby(i)}
         </textarea> <hr>
         <form id="myForm">
           <label for="new_value">Nowa wartosc dla MAX:</label><br>
@@ -39,6 +27,16 @@
       <pre id="output"></pre>
         
         <script>
+           var formData = $('#myForm').serialize(); // Pobierz dane formularza
+            var url = 'zmien_zmienna.php'; // Ścieżka do pliku PHP obsługującego żądanie
+
+            $.ajax({
+                  type: 'POST',
+                  url: url,
+                  data: formData,
+                  success: function(response) { 
+                      $('#code').val(response);
+                   }}); // Ładuje plik py od razu po włączeniu strony
           // Obsługa zdarzenia submit dla formularza
           $('#myForm').submit(function(event) {
               event.preventDefault(); // Zatrzymaj domyślne zachowanie formularza
