--- a/Sierpinski/problem13.html
+++ b/Sierpinski/problem13.html
@@ -12,13 +12,11 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 <body><a href="index.html">Problems</a><br>
-  Prove that there exists infinitely many positive integers n such that for every even x none of the terms of the sequence $x^x + 1, x^(x)^(x) + 1, x^(x)^(x)^(x) + 1$, ... is divisible by$ n$.
+  Prove that there exists infinitely many positive integers n such that for every even x none of the terms of the sequence $ x^x + 1$, $ x^{x^x} + 1$, $x^{x^x^x} + 1$ .. is divisible by $ n$.
  <hr>
     <textarea rows="10" cols="80" disabled>theorem :: NUMBER01:1
       for n being positive Integer holds n+1 divides n^2 + 1 iff n = 1;</textarea> <hr>
     <textarea rows="10" cols="80" id="code" disabled>
-     
-
         </textarea> <hr>
         <form id="myForm">
           <label for="MAX_value">Nowa wartosc dla MAX:</label><br>
