--- a/Sierpinski/problem14.html
+++ b/Sierpinski/problem14.html
@@ -12,22 +12,10 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 <body><a href="index.html">Problems</a><br>
-  Prove that for positive integer n we have $((n+1)^n - 1)/(n^2)$ <hr>
+  Prove that for positive integer n we have $((n+1)^n - 1)/n^2$ <hr>
     <textarea rows="10" cols="80" disabled>theorem :: NUMBER01:1
       for n being positive Integer holds n+1 divides n^2 + 1 iff n = 1;</textarea> <hr>
     <textarea rows="10" cols="80" id="code" disabled>
-      def oblicz_wyrazenie(n):
-
-      k=((n+1)**n - 1)
-      if k % n**2 == 0:
-          print(f"({n}+1)^{n} - 1 = {k} = {k // (n**2)} * ({n}^{2})")
-      else:
-          print(f"(({n}+1)^{n} - 1) / ({n}^2) = {k / (n**2)}")
-  
-  # testujemy funkcję
-  for i in range(1, 11):  # dla n od 1 do 10
-      print(f"Dla n = {i}:")
-      oblicz_wyrazenie(i)
         </textarea> <hr>
         <form id="myForm">
           <label for="new_value">Nowa wartosc dla MAX:</label><br>
@@ -39,6 +27,16 @@
       <pre id="output"></pre>
         
         <script>
+           var formData = $('#myForm').serialize(); // Pobierz dane formularza
+            var url = 'zmien_zmienna.php'; // Ścieżka do pliku PHP obsługującego żądanie
+
+            $.ajax({
+                  type: 'POST',
+                  url: url,
+                  data: formData,
+                  success: function(response) { 
+                      $('#code').val(response);
+                   }}); // Ładuje plik py od razu po włączeniu strony
           // Obsługa zdarzenia submit dla formularza
           $('#myForm').submit(function(event) {
               event.preventDefault(); // Zatrzymaj domyślne zachowanie formularza
