--- a/Sierpinski/problem17.html
+++ b/Sierpinski/problem17.html
@@ -16,18 +16,6 @@
     <textarea rows="10" cols="80" disabled>theorem :: NUMBER01:1
       for n being positive Integer holds n+1 divides n^2 + 1 iff n = 1;</textarea> <hr>
     <textarea rows="10" cols="80" id="code" disabled>
-      MAX = 10
-      def oblicz_wyrazenie(a, n):
-          return (a**n + 1) % n == 0
-      
-      a = 2
-      m = 0
-      n = 0
-      while m < MAX:
-          n= n+1
-          if oblicz_wyrazenie(a, n):
-              m = m+1
-              print(f"Dla a = {a}, n = {n}: a^n + 1 = {a**n +1} = {n} * {(a**n + 1) // n}")
         </textarea> <hr>
         <form id="myForm">
           <label for="new_value">Nowa wartosc dla MAX:</label><br>
@@ -39,6 +27,16 @@
       <pre id="output"></pre>
         
         <script>
+           var formData = $('#myForm').serialize(); // Pobierz dane formularza
+            var url = 'zmien_zmienna.php'; // Ścieżka do pliku PHP obsługującego żądanie
+
+            $.ajax({
+                  type: 'POST',
+                  url: url,
+                  data: formData,
+                  success: function(response) { 
+                      $('#code').val(response);
+                   }}); // Ładuje plik py od razu po włączeniu strony
           // Obsługa zdarzenia submit dla formularza
           $('#myForm').submit(function(event) {
               event.preventDefault(); // Zatrzymaj domyślne zachowanie formularza
