--- a/Sierpinski/problem2.html
+++ b/Sierpinski/problem2.html
@@ -16,10 +16,6 @@
     <textarea rows="10" cols="80" disabled>theorem :: NUMBER01:1
       for n being positive Integer holds n+1 divides n^2 + 1 iff n = 1;</textarea> <hr>
     <textarea rows="10" cols="80" id="code" disabled>
-        MAX = 8
-for x in range(-MAX, MAX):
-    if x != 3 and (x**3 - 3)%(x-3) == 0:
-        print(x)
         </textarea> <hr>
         <form id="myForm">
           <label for="new_value">Nowa wartosc dla MAX:</label><br>
@@ -31,7 +27,18 @@ for x in range(-MAX, MAX):
       <pre id="output"></pre>
         
         <script>
-          // Obsługa zdarzenia submit dla formularza
+            var formData = $('#myForm').serialize(); // Pobierz dane formularza
+            var url = 'zmien_zmienna.php'; // Ścieżka do pliku PHP obsługującego żądanie
+
+            $.ajax({
+                  type: 'POST',
+                  url: url,
+                  data: formData,
+                  success: function(response) { 
+                      $('#code').val(response);
+                   }}); // Ładuje plik py od razu po włączeniu strony
+
+                    // Obsługa zdarzenia submit dla formularza
           $('#myForm').submit(function(event) {
               event.preventDefault(); // Zatrzymaj domyślne zachowanie formularza
               
