--- a/Sierpinski/problem23.html
+++ b/Sierpinski/problem23.html
@@ -18,17 +18,6 @@
     <textarea rows="10" cols="80" disabled>theorem :: NUMBER01:1
       for n being positive Integer holds n+1 divides n^2 + 1 iff n = 1;</textarea> <hr>
     <textarea rows="10" cols="80" id="code" disabled>
-      def znajdz_n(p, limit):
-      result = []
-      for n in range(1, limit + 1):  # Przechodzimy przez wszystkie n od 1 do limitu
-          if (n * 4 + 1) % p == 0:  # Sprawdzamy, czy n*4 + 1 jest podzielne przez p
-              result.append(n)
-      return result
-  
-  p = 7  # Wybieramy nieparzystą liczbę pierwszą
-  limit = 100  # Ustalamy limit do sprawdzenia
-  print(znajdz_n(p, limit))
-  
         </textarea> <hr>
         <form id="myForm">
           <label for="new_value">Nowa wartosc dla MAX:</label><br>
@@ -40,6 +29,16 @@
       <pre id="output"></pre>
         
         <script>
+           var formData = $('#myForm').serialize(); // Pobierz dane formularza
+            var url = 'zmien_zmienna.php'; // Ścieżka do pliku PHP obsługującego żądanie
+
+            $.ajax({
+                  type: 'POST',
+                  url: url,
+                  data: formData,
+                  success: function(response) { 
+                      $('#code').val(response);
+                   }}); // Ładuje plik py od razu po włączeniu strony
           // Obsługa zdarzenia submit dla formularza
           $('#myForm').submit(function(event) {
               event.preventDefault(); // Zatrzymaj domyślne zachowanie formularza
