--- a/Sierpinski/problem27.html
+++ b/Sierpinski/problem27.html
@@ -12,36 +12,11 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 <body><a href="index.html">Problems</a><br>
-  Find two least composite numbers $n$ such that $(2^n-2)/n$ and $((3^n-3)/n)$.
+  Find two least composite numbers $n$ such that $2^n-2/n$ and $3^n-3/n$.
   <hr>
     <textarea rows="10" cols="80" disabled>theorem :: NUMBER01:1
       for n being positive Integer holds n+1 divides n^2 + 1 iff n = 1;</textarea> <hr>
     <textarea rows="10" cols="80" id="code" disabled>
-      def zlozonosc(n):
-      if n <= 1:
-          return False
-      for i in range(2, int(n**0.5) + 1):
-          if n % i == 0:
-              return True
-      return False
-  
-  def znajdź_liczby():
-      result_2 = []
-      result_3 = []
-      n = 4
-      while len(result_2) < 2 or len(result_3) < 2:
-          if zlozonosc(n):
-              if (2**n - 2) % n == 0:
-                  result_2.append(n)
-              if (3**n - 3) % n == 0:
-                  result_3.append(n)
-          n += 1
-      return result_2, result_3
-  
-  result_2, result_3 = znajdź_liczby()
-  print(f"Najmniejsze liczby złożone dla (2^n - 2)/n: {result_2}")
-  print(f"Najmniejsze liczby złożone dla (3^n - 3)/n: {result_3}")
-  
         </textarea> <hr>
         <form id="myForm">
           <label for="new_value">Nowa wartosc dla MAX:</label><br>
@@ -53,6 +28,16 @@
       <pre id="output"></pre>
         
         <script>
+             var formData = $('#myForm').serialize(); // Pobierz dane formularza
+            var url = 'zmien_zmienna.php'; // Ścieżka do pliku PHP obsługującego żądanie
+
+            $.ajax({
+                  type: 'POST',
+                  url: url,
+                  data: formData,
+                  success: function(response) { 
+                      $('#code').val(response);
+                   }}); // Ładuje plik py od razu po włączeniu strony
           // Obsługa zdarzenia submit dla formularza
           $('#myForm').submit(function(event) {
               event.preventDefault(); // Zatrzymaj domyślne zachowanie formularza
