--- a/Sierpinski/problem28.html
+++ b/Sierpinski/problem28.html
@@ -12,26 +12,11 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 <body><a href="index.html">Problems</a><br>
-  Find the least positive integer n such that $(2^n-2)$ divide $n$ but $(3^n-3)$ don't divide $n$.
+  Find the least positive integer n such that $2^n-2$ divide $n$ but $3^n-3$ don't divide $n$.
   <hr>
     <textarea rows="10" cols="80" disabled>theorem :: NUMBER01:1
       for n being positive Integer holds n+1 divides n^2 + 1 iff n = 1;</textarea> <hr>
     <textarea rows="10" cols="80" id="code" disabled>
-      def NWD(a, b):
-      while b:
-          a, b = b, a % b
-      return a
-  
-  def znajdz_najmniejsze_n():
-      n = 1
-      while True:
-          if NWD(2 ** n - 2, n) == n and NWD(3 ** n - 3, n) != n:
-              return n
-          n += 1
-  
-  smallest_n = znajdz_najmniejsze_n()
-  print("Najmniejsza liczba n spełniająca warunki: ", smallest_n)
-  
         </textarea> <hr>
         <form id="myForm">
           <label for="new_value">Nowa wartosc dla MAX:</label><br>
@@ -43,6 +28,16 @@
       <pre id="output"></pre>
         
         <script>
+           var formData = $('#myForm').serialize(); // Pobierz dane formularza
+            var url = 'zmien_zmienna.php'; // Ścieżka do pliku PHP obsługującego żądanie
+
+            $.ajax({
+                  type: 'POST',
+                  url: url,
+                  data: formData,
+                  success: function(response) { 
+                      $('#code').val(response);
+                   }}); // Ładuje plik py od razu po włączeniu strony
           // Obsługa zdarzenia submit dla formularza
           $('#myForm').submit(function(event) {
               event.preventDefault(); // Zatrzymaj domyślne zachowanie formularza
