--- a/Sierpinski/problem3.html
+++ b/Sierpinski/problem3.html
@@ -16,20 +16,7 @@
     <textarea rows="10" cols="80" disabled>theorem :: NUMBER01:1
       for n being positive Integer holds n+1 divides n^2 + 1 iff n = 1;</textarea> <hr>
     <textarea rows="10" cols="80" id="code" disabled>
-        MIN = 1000
-        def generator(k):
-            n = 1
-            licznik = 0
-            while licznik < k:
-                number = 4*(n**2) + 1
-                if number % 5 == 0 and number % 13 == 0:
-                    print(n,": 4 * ", n, "^2 + 1 =", number, "= 5 *",  number//5, "= 13 *", number//13)
-                    licznik += 1
-                n += 1
-        
-        # Generuje pierwsze MIN liczb spełniających warunek
-        generator(MIN)
-        </textarea> <hr>
+    </textarea> <hr>
         <form id="myForm">
           <label for="new_value">Nowa wartosc dla MAX:</label><br>
           <input type="number" id="new_value" name="new_value" min="1"><br>
@@ -40,6 +27,16 @@
       <pre id="output"></pre>
         
         <script>
+          var formData = $('#myForm').serialize(); // Pobierz dane formularza
+            var url = 'zmien_zmienna.php'; // Ścieżka do pliku PHP obsługującego żądanie
+
+            $.ajax({
+                  type: 'POST',
+                  url: url,
+                  data: formData,
+                  success: function(response) { 
+                      $('#code').val(response);
+                   }}); // Ładuje plik py od razu po włączeniu strony
           // Obsługa zdarzenia submit dla formularza
           $('#myForm').submit(function(event) {
               event.preventDefault(); // Zatrzymaj domyślne zachowanie formularza
