--- a/Sierpinski/problem5.html
+++ b/Sierpinski/problem5.html
@@ -16,16 +16,6 @@
     <textarea rows="10" cols="80" disabled>theorem :: NUMBER01:1
       for n being positive Integer holds n+1 divides n^2 + 1 iff n = 1;</textarea> <hr>
     <textarea rows="10" cols="80" id="code" disabled>
-      def check_numbers(n):
-
-        number = (2**(2**(6*n+2)) + 3)
-        if number % 19 == 0:
-            print(f"Dla k = {n}, (2^(2^(6*{n}+1)) +3) = {number}\n= 19 * {number // 19}")
-        else:
-            print(f"Dla k = {n}, (2^(2^(6*{n}+1)) +3) nie jest liczbą całkowitą: {number / 19}")
-
- # Sprawdza dla pierwszych 20 nieujemnych liczb całkowitych k
-check_numbers(2)
         </textarea> <hr>
         <form id="myForm">
           <label for="new_value">Nowa wartosc dla MAX:</label><br>
@@ -37,6 +27,16 @@ check_numbers(2)
       <pre id="output"></pre>
         
         <script>
+           var formData = $('#myForm').serialize(); // Pobierz dane formularza
+            var url = 'zmien_zmienna.php'; // Ścieżka do pliku PHP obsługującego żądanie
+
+            $.ajax({
+                  type: 'POST',
+                  url: url,
+                  data: formData,
+                  success: function(response) { 
+                      $('#code').val(response);
+                   }}); // Ładuje plik py od razu po włączeniu strony
           // Obsługa zdarzenia submit dla formularza
           $('#myForm').submit(function(event) {
               event.preventDefault(); // Zatrzymaj domyślne zachowanie formularza
