--- a/Sierpinski/problem9.html
+++ b/Sierpinski/problem9.html
@@ -12,25 +12,10 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 <body><a href="index.html">Problems</a><br>
-  Prove that for every positive integer n the number $3((1^5)+(2^5)+...+(n^5))$ is divisible by $(1^3)+(2^3)+...+(n^3)$ <hr>
+  Prove that for every positive integer n the number $3(1^5+2^5+...+n^5)$ is divisible by $1^3+2^3+...+n^3$ <hr>
     <textarea rows="10" cols="80" disabled>theorem :: NUMBER01:1
       for n being positive Integer holds n+1 divides n^2 + 1 iff n = 1;</textarea> <hr>
     <textarea rows="10" cols="80" id="code" disabled>
-      def check_numbers(n):
-
-      sum1 = sum(j**5 for j in range(1, n+1))
-      sum2 = sum(j**3 for j in range(1, n+1))
-      number = 3 * sum1
-      if number % sum2 == 0:
-          print(f"Dla n = {n}: 3*(1^5+...+{n}^5) = {number}, 1^3+...+{n}^3 = {sum2}, {number} = {number//sum2} * {sum2}")
-      else:
-          print(f"Dla n = {n}, wartość wyrażenia nie jest liczbą całkowitą: {number/sum2}")
-
-# Sprawdza dla pierwszych 10 dodatnich liczb całkowitych n
-check_numbers(1000)
-
-#Drukowanie tak jak we wzorze z podstawiona liczba
-
         </textarea> <hr>
         <form id="myForm">
           <label for="new_value">Nowa wartosc dla MAX:</label><br>
@@ -42,6 +27,16 @@ check_numbers(1000)
       <pre id="output"></pre>
         
         <script>
+           var formData = $('#myForm').serialize(); // Pobierz dane formularza
+            var url = 'zmien_zmienna.php'; // Ścieżka do pliku PHP obsługującego żądanie
+
+            $.ajax({
+                  type: 'POST',
+                  url: url,
+                  data: formData,
+                  success: function(response) { 
+                      $('#code').val(response);
+                   }}); // Ładuje plik py od razu po włączeniu strony
           // Obsługa zdarzenia submit dla formularza
           $('#myForm').submit(function(event) {
               event.preventDefault(); // Zatrzymaj domyślne zachowanie formularza
