--- a/Sierpinski/problem7.html
+++ b/Sierpinski/problem7.html
@@ -18,10 +18,8 @@
     <textarea rows="10" cols="80" id="code" disabled>
         </textarea> <hr>
         <form id="myForm">
-          <label for="new_value">Nowa wartosc dla MAX:</label><br>
-          <input type="number" id="new_value" name="new_value" min="1"><br>
-          <input type="hidden" id="numer_zadania" name="numer_zadania" value="7">
-          <input type="submit" value="Zmien i uruchom skrypt">
+          <input type="hidden" name="numer_zadania" value="7">
+          <input type="submit" value="Uruchom skrypt">
       </form>
       <p>Wynik:</p>
       <pre id="output"></pre>
