--- a/Sierpinski/problem15.html
+++ b/Sierpinski/problem15.html
@@ -19,9 +19,9 @@
     <textarea rows="10" cols="80" id="code" disabled>
         </textarea> <hr>
         <form id="myForm">
-          <label for="new_value">Nowa wartosc dla MAX:</label><br>
-          <input type="number" id="new_value" name="new_value" min="1"><br>
-          <input type="hidden" id="numer_zadania" name="numer_zadania" value="15">
+          <label for="MAX_value">Nowa wartosc dla MAX:</label><br>
+          <input type="number" name="MAX_value" min="1"><br>
+          <input type="hidden" name="numer_zadania" value="15">
           <input type="submit" value="Zmien i uruchom skrypt">
       </form>
       <p>Wynik:</p>
