--- a/Sierpinski/problem29.html
+++ b/Sierpinski/problem29.html
@@ -13,15 +13,14 @@
 </head>
 <body><a href="index.html">Problems</a><br>
   Find the least positive integer $n$ such that $2^n-2$ don't divide $n$ but $3^n-3$ divide $n$<hr>
-    <textarea rows="10" cols="80" disabled>theorem :: NUMBER01:1
-      for n being positive Integer holds n+1 divides n^2 + 1 iff n = 1;</textarea> <hr>
+    <textarea rows="10" cols="80" disabled>theorem :: NUMBER02:44
+      not 6 divides 2|^6-2 & 6 divides 3|^6-3 &
+      not ex n being Nat st n < 6 & not n divides 2|^n-2 & n divides 3|^n-3;</textarea> <hr>
     <textarea rows="10" cols="80" id="code" disabled>
         </textarea> <hr>
         <form id="myForm">
-          <label for="new_value">Nowa wartosc dla MAX:</label><br>
-          <input type="number" id="new_value" name="new_value" min="1"><br>
-          <input type="hidden" id="numer_zadania" name="numer_zadania" value="29">
-          <input type="submit" value="Zmien i uruchom skrypt">
+          <input type="hidden" name="numer_zadania" value="29">
+          <input type="submit" value="Uruchom skrypt">
       </form>
       <p>Wynik:</p>
       <pre id="output"></pre>
