--- a/Sierpinski/problem12.html
+++ b/Sierpinski/problem12.html
@@ -11,18 +11,20 @@
 </script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
-<body><a href="index.html">Problems</a><br>
-  Prove that for every positive integer $n$ there exists a positive integer $x$ such that each of the terms of the infinite sequence $x+1, x^{x+ 1}, x^{x^x} + 1$, ... is divisible by $n$.  <hr>
-    <textarea rows="10" cols="80" disabled>theorem :: NUMBER01:1
-      for n being positive Integer holds n+1 divides n^2 + 1 iff n = 1;</textarea> <hr>
-    <textarea rows="10" cols="80" id="code" disabled>
+<body><a href="index.html">Problems</a><br><a href="problem1.html">Problem1 </a><a href="problem2.html">Problem2 </a><a href="problem3.html">Problem3 </a><a href="problem4.html">Problem4 </a><a href="problem5.html">Problem5 </a><a href="problem6.html">Problem6 </a><a href="problem7.html">Problem7 </a><a href="problem8.html">Problem8 </a><a href="problem9.html">Problem9 </a><a href="problem10.html">Problem10 </a><a href="problem11.html">Problem11 </a><a href="problem12.html">Problem12 </a><a href="problem13.html">Problem13 </a><a href="problem14.html">Problem14 </a> <a href="problem15.html">Problem15 </a><a href="problem16.html">Problem16 </a><a href="problem17.html">Problem17 </a><a href="problem18.html">Problem18 </a><a href="problem19.html">Problem19 </a><a href="problem20.html">Problem20 </a><a href="problem21.html">Problem21 </a><a href="problem22.html">Problem22 </a><a href="problem23.html">Problem23 </a><a href="problem24.html">Problem24 </a><a href="problem25.html">Problem25 </a><a href="problem26.html">Problem26 </a><a href="problem27.html">Problem27 </a><a href="problem28.html">Problem28 </a><a href="problem29.html">Problem29 </a><a href="problem30.html">Problem30 </a><br>
+  12. Prove that for every positive integer $n$ there exists a positive integer $x$ such that each of the terms of the infinite sequence $x+1, x^{x+ 1}, x^{x^x} + 1$, ... is divisible by $n$.  <hr>
+    <textarea rows="10" cols="80" disabled>theorem :: NUMBER05:2
+      for n being non zero Nat ex x being non zero Nat st
+      for i being Nat holds n divides x|^|^(i+1) + 1;</textarea> <hr>
+    <textarea rows="20" cols="80" id="code" disabled>
         </textarea> <hr>
         <form id="myForm">
-          <label for="MAX_value">Nowa wartosc dla MAX:</label><br>
+          <label for="MAX_value">Nowa wartość dla MAX:</label><br>
           <input type="number" name="MAX_value" min="1"><br>
+          <label for="MAXN_value">Nowa wartość dla MAXN:</label><br>
           <input type="number" name="MAXN_value" min="1"><br>
           <input type="hidden" name="numer_zadania" value="12">
-          <input type="submit" value="Zmien i uruchom skrypt">
+          <input type="submit" value="Zmień i uruchom skrypt">
       </form>
       <p>Wynik:</p>
       <pre id="output"></pre>
